--- a/index.html
+++ b/index.html
@@ -8,22 +8,23 @@
   <style>
     @import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
 
+    html {
+      height: 100%;
+    }
+
     body {
       margin: 0;
-      height: 100vh;
+      min-height: 100%;
       background: url('https://raw.githubusercontent.com/whisprcoin/whispr/refs/heads/main/5.png') no-repeat center center fixed;
       background-size: cover;
       color: #fff;
       font-family: 'VT323', monospace;
       display: flex;
       flex-direction: column;
-      justify-content: center;
       align-items: center;
       text-align: center;
       letter-spacing: 1px;
       backdrop-filter: brightness(0.7) blur(1px);
-      overflow-x: hidden; /* Spriječava horizontalni scroll */
-      overflow-y: auto; /* Omogućava vertikalni scroll ako treba */
     }
     
     h1 {
@@ -65,7 +66,9 @@
       flex-direction: column;
       align-items: center;
       width: 100%;
-      padding: 20px 0;
+      padding: 40px 0;
+      flex-grow: 1;
+      justify-content: center;
     }
 
     a {
@@ -80,10 +83,8 @@
     }
 
     .footer-links {
-      position: relative; /* Promijenjeno s fixed */
-      margin-top: 40px;
-      padding-bottom: 25px;
       width: 100%;
+      padding: 20px 0;
       text-align: center;
       z-index: 2;
     }
@@ -309,14 +310,13 @@
       font-family: 'VT323', monospace;
       color: #ccc;
       display: none; /* Sakriveno dok JS ne učita podatke */
-      text-align: left;
     }
     .trending-container.show { display: block; }
     .trending-container h3 {
       margin: 0 0 10px 0;
       font-size: 18px;
       color: #fff;
-      text-align: left;
+      text-align: center; /* Centriran naslov */
     }
     #trending-list {
       list-style-type: none;
@@ -324,6 +324,8 @@
       margin: 0;
       font-size: 16px;
       counter-reset: trending-counter;
+      text-align: left; /* Lista ostaje lijevo poravnata */
+      display: inline-block; /* Omogućava da se lista centrira unutar roditelja */
     }
     #trending-list li {
       padding: 6px 0;
@@ -331,7 +333,6 @@
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
-      text-align: left;
       counter-increment: trending-counter;
     }
     #trending-list li::before {
@@ -376,7 +377,7 @@
 
       <!-- === TRENDING LISTA === -->
       <div id="trending-whispers" class="trending-container">
-        <h3>Trending whisprs</h3>
+        <h3>Trending whisprs 🔇</h3>
         <ol id="trending-list">
           <!-- Lista će biti popunjena putem JavaScripta -->
         </ol>
@@ -415,11 +416,11 @@
       </div>
     </div>
 
-    <div class="footer-links">
-      <a href="https://x.com/whisprcoin" target="_blank">x</a>
-      <a href="#" target="_blank">solscan (soon)</a>
-    </div>
+  </div>
 
+  <div class="footer-links">
+    <a href="https://x.com/whisprcoin" target="_blank">x</a>
+    <a href="#" target="_blank">solscan (soon)</a>
   </div>
 
   <script>
@@ -903,6 +904,8 @@
 </script>
 </body>
 </html>
+
+
 
 
 
