--- a/index.html
+++ b/index.html
@@ -302,21 +302,22 @@
     /* === STILOVI ZA TRENDING LISTU === */
     .trending-container {
       margin-top: 40px;
-      width: min(600px, 90vw);
-      background: rgba(10, 10, 10, 0.85);
+      width: min(450px, 90vw); /* Smanjena širina */
+      background: rgba(10, 10, 10, 0.7); /* Povećana prozirnost */
       border: 1px solid #2a2a2a;
       border-radius: 8px;
       padding: 15px;
       font-family: 'VT323', monospace;
       color: #ccc;
       display: none; /* Sakriveno dok JS ne učita podatke */
+      text-align: center; /* Centriranje sadržaja unutar boxa */
     }
     .trending-container.show { display: block; }
     .trending-container h3 {
       margin: 0 0 10px 0;
       font-size: 18px;
       color: #fff;
-      text-align: center; /* Centriran naslov */
+      text-align: center;
     }
     #trending-list {
       list-style-type: none;
@@ -324,8 +325,8 @@
       margin: 0;
       font-size: 16px;
       counter-reset: trending-counter;
-      text-align: left; /* Lista ostaje lijevo poravnata */
-      display: inline-block; /* Omogućava da se lista centrira unutar roditelja */
+      text-align: left;
+      display: inline-block;
     }
     #trending-list li {
       padding: 6px 0;
@@ -904,6 +905,8 @@
 </script>
 </body>
 </html>
+
+
 
 
 
