--- a/index.html
+++ b/index.html
@@ -308,23 +308,25 @@
 
     /* === STILOVI ZA TRENDING LISTU === */
     .trending-container {
-      margin-top: 40px;
-      width: min(450px, 90vw);
-      background: rgba(10, 10, 10, 0.7);
+      position: fixed;
+      top: 20px;
+      right: 20px;
+      width: 250px;
+      background: rgba(10, 10, 10, 0.85);
       border: 1px solid #2a2a2a;
       border-radius: 8px;
       padding: 15px;
       font-family: 'VT323', monospace;
       color: #ccc;
+      z-index: 10;
       display: none; /* Sakriveno dok JS ne učita podatke */
-      text-align: center;
     }
     .trending-container.show { display: block; }
     .trending-container h3 {
       margin: 0 0 10px 0;
       font-size: 18px;
       color: #fff;
-      text-align: center;
+      text-align: left;
     }
     #trending-list {
       list-style-type: none;
@@ -332,8 +334,6 @@
       margin: 0;
       font-size: 16px;
       counter-reset: trending-counter;
-      text-align: left;
-      display: inline-block;
     }
     #trending-list li {
       padding: 6px 0;
@@ -341,6 +341,7 @@
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
+      text-align: left;
       counter-increment: trending-counter;
     }
     #trending-list li::before {
@@ -382,14 +383,6 @@
       </div>
 
       <button id="showAiBtn">Try WhisprBot AI</button>
-
-      <!-- === TRENDING LISTA === -->
-      <div id="trending-whispers" class="trending-container">
-        <h3>Trending whisprs 🔇</h3>
-        <ol id="trending-list">
-          <!-- Lista će biti popunjena putem JavaScripta -->
-        </ol>
-      </div>
     </div>
 
     <!-- === AI CHAT SADRŽAJ (SKRIVEN) === -->
@@ -424,6 +417,14 @@
       </div>
     </div>
 
+  </div>
+
+  <!-- === TRENDING LISTA === -->
+  <div id="trending-whispers" class="trending-container">
+    <h3>🔥 trending whisprs</h3>
+    <ol id="trending-list">
+      <!-- Lista će biti popunjena putem JavaScripta -->
+    </ol>
   </div>
 
   <div class="footer-links">
@@ -912,6 +913,7 @@
 </script>
 </body>
 </html>
+
 
 
 
